[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/BaseSummon.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/Whirlpool.gd" type="Script" id=2]
[ext_resource path="res://sounds/whoosh.wav" type="AudioStream" id=3]

[sub_resource type="Gradient" id=3]
resource_local_to_scene = true
offsets = PoolRealArray( 0, 0.173184, 0.444134, 0.513967, 0.681564 )
colors = PoolColorArray( 0.0994451, 0.147786, 0.17541, 1, 0.236338, 0.351225, 0.416875, 1, 0.282353, 0.419608, 0.498039, 1, 0.478431, 0.611765, 0.588235, 0.356863, 0.282353, 0.419608, 0.498039, 0 )

[sub_resource type="GradientTexture2D" id=5]
resource_local_to_scene = true
gradient = SubResource( 3 )
width = 24
height = 24
fill = 1
fill_from = Vector2( 0.5, 0.5 )

[sub_resource type="CircleShape2D" id=1]
radius = 80.0

[sub_resource type="CircleShape2D" id=6]
radius = 6.0

[sub_resource type="Gradient" id=4]
offsets = PoolRealArray( 0.206704, 0.634078, 1 )
colors = PoolColorArray( 0.478431, 0.611765, 0.588235, 0.784314, 1, 1, 1, 0.866667, 1, 1, 1, 0 )

[node name="Whirlpool" instance=ExtResource( 1 )]
z_index = -3
script = ExtResource( 2 )
target = "world"
pull_force = 200
capture_groups = [ "player", "actual_player", "collectible" ]

[node name="Sprite" type="Sprite" parent="." index="0"]
scale = Vector2( 5.33333, 5.33333 )
texture = SubResource( 5 )

[node name="AoE" type="Area2D" parent="." index="1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AoE" index="0"]
shape = SubResource( 1 )

[node name="Center" type="Area2D" parent="." index="2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Center" index="0"]
shape = SubResource( 6 )

[node name="PoolParticles" type="CPUParticles2D" parent="." index="3"]
amount = 400
lifetime = 5.0
randomness = 1.0
lifetime_randomness = 1.0
emission_shape = 1
emission_sphere_radius = 30.0
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 136.44
initial_velocity_random = 0.79
orbit_velocity = 2.0
orbit_velocity_random = 0.61
linear_accel_random = 1.0
radial_accel = 6.0
radial_accel_random = 1.0
damping = 100.0
damping_random = 0.53
scale_amount = 3.0
scale_amount_random = 1.0
color_ramp = SubResource( 4 )

[node name="DisperseTimer" type="Timer" parent="." index="4"]
wait_time = 0.5
one_shot = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="." index="5"]
stream = ExtResource( 3 )
volume_db = -7.278
pitch_scale = 0.43
autoplay = true
bus = "Sound"

[connection signal="area_entered" from="AoE" to="." method="_on_AoE_area_entered"]
[connection signal="area_exited" from="AoE" to="." method="_on_AoE_area_exited"]
[connection signal="area_entered" from="Center" to="." method="_on_Center_area_entered"]
